# AGV_api

./: .gitignore  CMakeLists.txt  README.md
Perception/: CMakeLists.txt  CMakeLists.txt~
Perception/include/: LidarData.hpp  MonoCamData.hpp  StereoCamData.hpp
Perception/src/: LidarData.cpp  MonoCamData.cpp  StereoCamData.cpp
include/Perception/: LaneDetection.hpp  MonoCamData.hpp  ObjectData.hpp  ObjectDetection.hpp  Preprocessing.hpp  StereoCamData.hpp
src/Perception/: LaneDetection.cpp  LidarData.cpp  MonoCamData.cpp  ObjectData.cpp  ObjectDetection.cpp  StereoCamData.cpp  TestClasses.cpp
